v0.0.0.2:
	- Fixed:
		-	#1 Firstrun exception
v0.0.0.1:
	- Initial version