@@ -1,5 +1,6 @@
 v0.0.0.2:
 	- Fixed:
 		-	#1 Firstrun exception
+		- #2 Altering prefs
 v0.0.0.1:
 	- Initial version
